# poseidon-hs

./: .gitignore  CHANGELOG.md  CHANGELOGRELEASE.md  LICENSE  Poseidon-AccessionIDs.html  Poseidon-Analysis-FStatsConfig.html  Poseidon-Analysis-Generator-Parsers.html  Poseidon-Analysis-Generator-SampleGeno.html  Poseidon-Analysis-Generator-Types.html  Poseidon-Analysis-Generator-Utils.html  Poseidon-Analysis-RASconfig.html  Poseidon-Analysis-Utils.html  Poseidon-BibFile.html  Poseidon-CLI-Chronicle.html  Poseidon-CLI-FStats.html  Poseidon-CLI-Fetch.html  Poseidon-CLI-Forge.html  Poseidon-CLI-Genoconvert.html  Poseidon-CLI-Init.html  Poseidon-CLI-Jannocoalesce.html  Poseidon-CLI-List.html  Poseidon-CLI-OptparseApplicativeParsers.html  Poseidon-CLI-Rectify.html  Poseidon-CLI-Serve.html  Poseidon-CLI-Summarise.html  Poseidon-CLI-Survey.html  Poseidon-CLI-Timetravel.html  Poseidon-CLI-Trident-Chronicle.html  Poseidon-CLI-Trident-Fetch.html  Poseidon-CLI-Trident-Forge.html  Poseidon-CLI-Trident-Genoconvert.html  Poseidon-CLI-Trident-Init.html  Poseidon-CLI-Trident-Jannocoalesce.html  Poseidon-CLI-Trident-List.html  Poseidon-CLI-Trident-OptparseApplicativeParsers.html  Poseidon-CLI-Trident-Rectify.html  Poseidon-CLI-Trident-Serve.html  Poseidon-CLI-Trident-Summarise.html  Poseidon-CLI-Trident-Survey.html  Poseidon-CLI-Trident-Timetravel.html  (+89 more)
.github/workflows/: Dockerfile.centos  build_experiments.yml.disabled  main.yml  mastodon.yml  release.yml  release.yml.disabled  release_backup.yml  stylishHaskell.yml  twitter.yml  windows_experiments.yml
data/: README.md  bibtex.csl  htmlapi-plots.js  htmlapi-table.js  htmlapi.css  htmlapi.js
docs/: 1_poseidon_module_structure.rst  conf.py
poseidon/: data_module.py  genotype_data.py  genotype_iterator.py  runner.py  utils.py
poseidon/tests/: scratch.py  test_data_module.py  test_genotype_iterator.py
python_old/docs/: 2_cli_usage.rst  3_api_usage.rst  index.rst
python_old/poseidon/: data_module.py  notes.txt  runner.py  utils.py
src/: Paths_poseidon_hs.html  Poseidon.AccessionIDs.html  Poseidon.Analysis.FStatsConfig.html  Poseidon.Analysis.Generator.Parsers.html  Poseidon.Analysis.Generator.SampleGeno.html  Poseidon.Analysis.Generator.Types.html  Poseidon.Analysis.Generator.Utils.html  Poseidon.Analysis.RASconfig.html  Poseidon.Analysis.Utils.html  Poseidon.BibFile.html  Poseidon.CLI.Chronicle.html  Poseidon.CLI.FStats.html  Poseidon.CLI.Fetch.html  Poseidon.CLI.Forge.html  Poseidon.CLI.Genoconvert.html  Poseidon.CLI.Init.html  Poseidon.CLI.Jannocoalesce.html  Poseidon.CLI.List.html  Poseidon.CLI.OptparseApplicativeParsers.html  Poseidon.CLI.Rectify.html  Poseidon.CLI.Serve.html  Poseidon.CLI.Summarise.html  Poseidon.CLI.Survey.html  Poseidon.CLI.Timetravel.html  Poseidon.CLI.Trident.Chronicle.html  Poseidon.CLI.Trident.Fetch.html  Poseidon.CLI.Trident.Forge.html  Poseidon.CLI.Trident.Genoconvert.html  Poseidon.CLI.Trident.Init.html  Poseidon.CLI.Trident.Jannocoalesce.html  Poseidon.CLI.Trident.List.html  Poseidon.CLI.Trident.OptparseApplicativeParsers.html  Poseidon.CLI.Trident.Rectify.html  Poseidon.CLI.Trident.Serve.html  Poseidon.CLI.Trident.Summarise.html  Poseidon.CLI.Trident.Survey.html  Poseidon.CLI.Trident.Timetravel.html  Poseidon.CLI.Trident.Validate.html  Poseidon.CLI.Update.html  Poseidon.CLI.Validate.html  (+43 more)
src-bench/: MainBench.hs
src-executables/: Main-devtools.hs  Main-server.hs  Main-trident.hs  Main-xerxes.hs  Main.hs
src/Poseidon/: AccessionIDs.hs  BibFile.hs  Checksums.hs  Chronicle.hs  CmdExtract.hs  CmdFStats.hs  CmdJanno.hs  CmdList.hs  CmdMerge.hs  CmdSummarise.hs  CmdSurvey.hs  CmdValidate.hs  ColumnTypes.hs  ColumnTypesJanno.hs  ColumnTypesSSF.hs  ColumnTypesUtils.hs  Contributor.hs  EntitiesList.hs  EntityTypes.hs  FStats.hs  ForgeRecipe.hs  GenotypeData.hs  Janno.hs  JannoTypes.hs  JannoTypesTH.hs  MathHelpers.hs  MetaData.hs  Module.hs  Package.hs  PoseidonVersion.hs  SecondaryTypes.hs  SequencingSource.hs  ServerClient.hs  ServerHTML.hs  ServerStylesheet.hs  Snapshot.hs  Utils.hs  Version.hs
src/Poseidon/Analysis/: FStatsConfig.hs  RASconfig.hs  Utils.hs
src/Poseidon/CLI/: Checksumupdate.hs  Chronicle.hs  Extract.hs  FStats.hs  Fetch.hs  Forge.hs  Genoconvert.hs  Init.hs  Jannocoalesce.hs  List.hs  Merge.hs  OptparseApplicativeParsers.hs  Rectify.hs  Serve.hs  Server.hs  Snapshot.hs  Summarise.hs  Survey.hs  Timetravel.hs  Update.hs  Validate.hs
src/Poseidon/Core/: AccessionIDs.hs  BibFile.hs  Chronicle.hs  ColumnTypesJanno.hs  ColumnTypesSSF.hs  ColumnTypesUtils.hs  Contributor.hs  EntityTypes.hs  GenotypeData.hs  Janno.hs  MathHelpers.hs  Package.hs  PoseidonVersion.hs  SequencingSource.hs  ServerClient.hs  ServerHTML.hs  ServerStylesheet.hs  ServerZipStream.hs  Utils.hs  Version.hs
src/Poseidon/Generator/: Parsers.hs  SampleGeno.hs  Types.hs
test/Poseidon/: BibFileSpec.hs  ChecksumsSpec.hs  ChronicleSpec.hs  EntitiesListSpec.hs  FStatsSpec.hs  ForgeSpec.hs  GenotypeDataSpec.hs  GoldenTestsRunCommands.hs  GoldenTestsValidateChecksumsSpec.hs  InterfaceSpec.hs  JannoSpec.hs  JannocoalesceSpec.hs  MathHelpersSpec.hs  ModuleSpec.hs  OptParseApplicativeParsersSpec.hs  PackageSpec.hs  SequencingSourceSpec.hs  SnapshotSpec.hs  SummariseSpec.hs  SurveySpec.hs  ValidateSpec.hs
test/Poseidon/Analysis/: FStatsSpec.hs  UtilsSpec.hs
test/Poseidon/Core/: BibFileSpec.hs  ChronicleSpec.hs  EntitiesListSpec.hs  GenotypeDataSpec.hs  InterfaceSpec.hs  JannoSpec.hs  JannocoalesceSpec.hs  MathHelpersSpec.hs  PackageSpec.hs  SequencingSourceSpec.hs  SummariseSpec.hs  SurveySpec.hs
test/PoseidonGoldenTests/: GoldenTestCheckSumFile.txt  GoldenTestsRunCommands.hs  GoldenTestsValidateChecksumsSpec.hs
test/manual_tests_xerxes/fstats_qp_comparison/: 3pop_tests.txt  4pop_tests.txt  fstatout.txt  qp3pop_params.txt  runFstats.sh
test/testDat/: .gitignore  poseidonHSGoldenTestCheckSumFile.txt  snpFile.snp  snpFile_unordered.snp  staticCheckSumFile.txt
test/xerxes_manual_tests/: .Rhistory
xerxes_legacy_changelog/: CHANGELOG.md  CHANGELOGRELEASE.md
xerxes_whitepaper/: main.tex  references.bib
(+396 files in other folders)
