name:                poseidon-hs
version:             1.4.0.2
synopsis:            A package with tools for working with Poseidon Genotype Data
description:         The tools in this package read and analyse Poseidon-formatted genotype databases, a modular system for storing genotype data from thousands of individuals.
license:             MIT
license-file:        LICENSE
author:              Stephan Schiffels, Clemens Schmid
maintainer:          stephan.schiffels@mac.com
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

library
    exposed-modules:    Poseidon.Package, Poseidon.GenotypeData, Poseidon.BibFile, Poseidon.Janno,
                        Poseidon.MathHelpers,
                        Poseidon.PoseidonVersion, Poseidon.SequencingSource, Poseidon.Chronicle,
                        Poseidon.EntityTypes, Poseidon.ServerClient, Poseidon.Contributor, Poseidon.Version
                        Poseidon.CLI.List, Poseidon.CLI.Chronicle, Poseidon.CLI.Serve,
                        Poseidon.CLI.Summarise, Poseidon.CLI.Validate, Poseidon.Utils,
                        Poseidon.CLI.Survey, Poseidon.CLI.Forge, Poseidon.CLI.Init,
                        Poseidon.CLI.Rectify, Poseidon.CLI.Fetch, Poseidon.CLI.Genoconvert,
                        Poseidon.CLI.OptparseApplicativeParsers, Poseidon.CLI.Timetravel
    other-modules:      Paths_poseidon_hs
    hs-source-dirs:     src
    build-depends:      base >= 4.7 && < 5, sequence-formats>=1.6.1, text, time, pipes-safe,
                        exceptions, pipes, bytestring, filepath, yaml, aeson, directory, parsec,
                        vector, pipes-ordered-zip, table-layout, mtl, split, warp, warp-tls, wai-cors,
                        scotty, cassava, pureMD5, wai, githash,
                        http-conduit, conduit, http-types, zip-archive,
                        unordered-containers, network-uri, optparse-applicative, co-log, regex-tdfa,
                        scientific, country, generics-sop, containers, process, deepseq
    default-language:   Haskell2010

executable trident
    main-is:            Main-trident.hs
    hs-source-dirs:     src-executables
    build-depends:      base, poseidon-hs, optparse-applicative, sequence-formats>=1.6.1, bytestring,
                        filepath, co-log
    other-modules:      Paths_poseidon_hs
    default-language:   Haskell2010

Test-Suite poseidon-tools-tests
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    build-depends:      base, hspec, poseidon-hs, bytestring, aeson,
                        raw-strings-qq, yaml, time, vector,
                        text, QuickCheck, directory, sequence-formats,
                        filepath, pipes, pipes-safe, pipes-ordered-zip,
                        unordered-containers, cassava, containers, process
    other-modules:      Poseidon.PackageSpec, Poseidon.JannoSpec,
                        Poseidon.BibFileSpec, Poseidon.MathHelpersSpec,
                        Poseidon.SummariseSpec, Poseidon.SurveySpec, Poseidon.GenotypeDataSpec,
                        Poseidon.EntitiesListSpec, PoseidonGoldenTests.GoldenTestsValidateChecksumsSpec,
                        PoseidonGoldenTests.GoldenTestsRunCommands, Poseidon.ChronicleSpec,
                        Poseidon.SequencingSourceSpec
  default-language:     Haskell2010

executable poseidon-devtools
    main-is:            Main-devtools.hs
    hs-source-dirs:     test, src-executables
    build-depends:      base, poseidon-hs, optparse-applicative, directory,
                        filepath, text, unordered-containers, bytestring,
                        sequence-formats, process
    other-modules:      Paths_poseidon_hs, PoseidonGoldenTests.GoldenTestsRunCommands
    default-language:   Haskell2010
