name:                poseidon-hs
version:             2.0.0.0
synopsis:            A package with tools for working with Poseidon genotype data
description:         The tools in this package read and analyse Poseidon-formatted genotype databases, a modular system for storing genotype data from thousands of individuals.
license:             MIT
license-file:        LICENSE
author:              Stephan Schiffels, Clemens Schmid
maintainer:          stephan.schiffels@mac.com
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     CHANGELOG.md

library
    exposed-modules:    
                        -- core
                        Poseidon.Core.Package, Poseidon.Core.GenotypeData, Poseidon.Core.BibFile,
                        Poseidon.Core.Janno, Poseidon.Core.ColumnTypesJanno, Poseidon.Core.ColumnTypesSSF,
                        Poseidon.Core.ColumnTypesUtils, Poseidon.Core.MathHelpers, Poseidon.Core.AccessionIDs,
                        Poseidon.Core.PoseidonVersion, Poseidon.Core.SequencingSource,
                        Poseidon.Core.Chronicle, Poseidon.Core.EntityTypes, Poseidon.Core.ServerClient,
                        Poseidon.Core.ServerHTML, Poseidon.Core.ServerStylesheet, Poseidon.Core.Contributor,
                        Poseidon.Core.Version,
                        -- trident CLI
                        Poseidon.CLI.Trident.List, Poseidon.CLI.Trident.Chronicle, Poseidon.CLI.Trident.Serve,
                        Poseidon.CLI.Trident.Summarise, Poseidon.CLI.Trident.Validate, Poseidon.CLI.Trident.Utils,
                        Poseidon.CLI.Trident.Survey, Poseidon.CLI.Trident.Forge, Poseidon.CLI.Trident.Init,
                        Poseidon.CLI.Trident.Rectify, Poseidon.CLI.Trident.Fetch, Poseidon.CLI.Trident.Genoconvert,
                        Poseidon.CLI.Trident.OptparseApplicativeParsers, Poseidon.CLI.Trident.Timetravel,
                        Poseidon.CLI.Trident.Jannocoalesce,
                        -- Analysis
                        Poseidon.Analysis.FStatsConfig, Poseidon.Analysis.RASconfig, Poseidon.Analysis.Utils,
                        Poseidon.Analysis.Generator.Parsers, Poseidon.Analysis.Generator.Types,
                        Poseidon.Analysis.Generator.SampleGeno, Poseidon.Analysis.Generator.Utils,
                        -- xerxes CLI
                        Poseidon.CLI.Xerxes.FStats, Poseidon.CLI.Xerxes.RAS, Poseidon.CLI.Xerxes.AdmixPops
    other-modules:      Paths_poseidon_hs
    hs-source-dirs:     src
    build-depends:      base >= 4.7 && < 5, sequence-formats>=1.6.1, text, time, pipes-safe, foldl,
                        exceptions, pipes, bytestring, filepath, yaml, aeson, directory, parsec,
                        vector, pipes-ordered-zip, table-layout<1.0.0.0, mtl, split, warp, warp-tls, wai-cors,
                        scotty, cassava, pureMD5, wai, githash, attoparsec, pipes-group,
                        http-conduit, conduit, http-types, zip-archive, MonadRandom, lens-family,
                        unordered-containers, network-uri, optparse-applicative, co-log, regex-tdfa,
                        scientific, country, generics-sop, containers, process, deepseq, template-haskell,
                        blaze-html, blaze-markup, neat-interpolation, file-embed, MissingH
    default-language:   Haskell2010

executable trident
    main-is:            Main-trident.hs
    hs-source-dirs:     src-executables
    build-depends:      base, poseidon-hs, optparse-applicative, sequence-formats>=1.6.1, bytestring,
                        filepath, co-log
    other-modules:      Paths_poseidon_hs
    default-language:   Haskell2010

Test-Suite poseidon-tools-tests
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    hs-source-dirs:     test
    build-depends:      base, hspec, poseidon-hs, bytestring, aeson,
                        raw-strings-qq, yaml, time, vector,
                        text, QuickCheck, directory, sequence-formats,
                        filepath, pipes, pipes-safe, pipes-ordered-zip,
                        unordered-containers, cassava, containers, process, country,
                        optparse-applicative, parsec
    other-modules:      Poseidon.PackageSpec, Poseidon.JannoSpec,
                        Poseidon.BibFileSpec, Poseidon.MathHelpersSpec, Poseidon.JannocoalesceSpec,
                        Poseidon.SummariseSpec, Poseidon.SurveySpec, Poseidon.GenotypeDataSpec,
                        Poseidon.EntitiesListSpec, PoseidonGoldenTests.GoldenTestsValidateChecksumsSpec,
                        PoseidonGoldenTests.GoldenTestsRunCommands, Poseidon.ChronicleSpec,
                        Poseidon.SequencingSourceSpec, Poseidon.InterfaceSpec,
                        Poseidon.Analysis.FStatsSpec, Poseidon.Analysis.UtilsSpec
  default-language:     Haskell2010

executable poseidon-devtools
    main-is:            Main-devtools.hs
    hs-source-dirs:     test, src-executables
    build-depends:      base, poseidon-hs, optparse-applicative, directory,
                        filepath, text, unordered-containers, bytestring,
                        sequence-formats, process
    other-modules:      Paths_poseidon_hs, PoseidonGoldenTests.GoldenTestsRunCommands
    default-language:   Haskell2010

executable xerxes
    main-is:            Main-xerxes.hs
    hs-source-dirs:     src-executables
    build-depends:      base, poseidon-hs, optparse-applicative, sequence-formats,
                        bytestring, co-log, text, filepath, MonadRandom
    other-modules:      Paths_poseidon_hs
    default-language:   Haskell2010
