name:                poseidon-tools
version:             0.0.1
synopsis:            A package with tools for working with Poseidon Genotype Data
description:         The tools in this package read and analyse Poseidon-formatted genotype databases, a modular system for storing genotype data from thousands of individuals.
license:             GPL-3
license-file:        LICENSE
author:              Stephan Schiffels
maintainer:          stephan.schiffels@mac.com
category:            Bioinformatics
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md,
                     Changelog.md

library
    exposed-modules:    Poseidon.Module
    hs-source-dirs:     src
    build-depends:      base >= 4.7 && < 5, sequence-formats, text, time, aeson, pipes-safe,
                        exceptions, pipes, bytestring, filepath
    default-language:   Haskell2010

Test-Suite poseidon-tools-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      test
  build-depends:       base, hspec, poseidon-tools, bytestring,
                       raw-strings-qq, aeson, time, stringsearch
  other-modules:       Poseidon.ModuleSpec
  default-language:    Haskell2010

